--- a/sass/org/_elements.scss
+++ b/sass/org/_elements.scss
@@ -425,10 +425,9 @@
 #summary{
 	margin: 0 1.5em;
 	padding:1.5625vw;
-	font-size:10em;
 	a,h3{
 		color: black;
-		text-decoration:dotted;
+		text-decoration:underline;
 		margin: 1em 0;
 	}
 }
