--- a/style.scss
+++ b/style.scss
@@ -46,11 +46,11 @@ License URI: LICENSE
 /*--------------------------------------------------------------
 # _t Original
 --------------------------------------------------------------*/
-@import "org/lib";
-@import "org/toppage";
-@import "org/subpage";
-@import "org/sidebar";
-@import "org/footer";
-@import "org/elements";
-@import "org/fontsize";
-@import "org/talk";
+@import "sass/org/lib";
+@import "sass/org/toppage";
+@import "sass/org/subpage";
+@import "sass/org/sidebar";
+@import "sass/org/footer";
+@import "sass/org/elements";
+@import "sass/org/fontsize";
+@import "sass/org/talk";
