--- a/style.scss
+++ b/style.scss
@@ -7,42 +7,11 @@ License: GNU General Public License v2 or later
 License URI: LICENSE
 */
 
-
-/*--------------------------------------------------------------
->>> TABLE OF CONTENTS:
-----------------------------------------------------------------
-# Normalize
-# Typography
-# Elements
-# Forms
-# Navigation
-	## Links
-	## Menus
-# Accessibility
-# Alignments
-# Widgets
-# Content
-	## Posts and pages
-	## Comments
-# Infinite scroll
-# Media
-	## Captions
-	## Galleries
---------------------------------------------------------------*/
-/*
-@import "variables-site/variables-site";
-@import "mixins/mixins-master";
-@import "typography/typography";
-@import "elements/elements";
-@import "forms/forms";
-@import "navigation/navigation";
-@import "modules/accessibility";
-@import "modules/alignments";
-@import "site/secondary/widgets";
-@import "site/site";
-@import "media/media";
-*/
-@import "sass/normalize";
+@import "sass/foundation/foundation";
+@import "sass/layout/layout";
+@import "sass/component/component";
+@import "sass/project/project";
+@import "sass/utility/utility";
 /*--------------------------------------------------------------
 # _t Original
 --------------------------------------------------------------*/
