--- a/style.css
+++ b/style.css
@@ -314,28 +314,6 @@ template {
 }
 
 /*--------------------------------------------------------------
-# _t Original
---------------------------------------------------------------*/
-/*--------------------------------------------------------------
-## Color
---------------------------------------------------------------*/
-/*base color = white*/
-/*アクセント color = 赤茶*/
-/*--------------------------------------------------------------
-## MediaQuery
---------------------------------------------------------------*/
-/*--------------------------------------------------------------
-## Shadow 
---------------------------------------------------------------*/
-.sdw_card {
-  -webkit-filter: drop-shadow(0.39062vw 0.39062vw 0.39062vw rgba(5, 5, 5, 0.9));
-          filter: drop-shadow(0.39062vw 0.39062vw 0.39062vw rgba(5, 5, 5, 0.9));
-}
-
-/*--------------------------------------------------------------
-## Vender Prefix
---------------------------------------------------------------*/
-/*--------------------------------------------------------------
 ## Everything
 --------------------------------------------------------------*/
 *, h1, h2, h3, p, img, a, div {
@@ -343,6 +321,8 @@ template {
   transition: 1s;
   margin: 0;
   padding: 0;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   font-family: "M PLUS Rounded 1c",'Source Sans Pro';
 }
 
@@ -358,6 +338,14 @@ html, body {
   height: auto;
 }
 
+/*--------------------------------------------------------------
+## Color
+--------------------------------------------------------------*/
+/*base color = white*/
+/*アクセント color = 赤茶*/
+/*--------------------------------------------------------------
+## MediaQuery
+--------------------------------------------------------------*/
 #primary, #secondary {
   margin: 0 1.5625vw;
 }
@@ -411,56 +399,6 @@ html, body {
   width: 100%;
   height: auto;
   background: linear-gradient(15deg, #F0F0F0 0%, #FFFFFF 70%, #F0F0F0 100%);
-}
-
-/*--------------------------------------------------------------
-## H1234
---------------------------------------------------------------*/
-h1 {
-  margin: 0;
-}
-
-/*--------------------------------------------------------------
-## Fonts
---------------------------------------------------------------*/
-/*--------------------------------------------------------------
-## Bar
---------------------------------------------------------------*/
-.bar-l {
-  display: block;
-  height: 0.2em;
-  width: 100%;
-  margin: 0.2em 0;
-}
-
-.bar-s {
-  display: block;
-  height: 0.1em;
-  width: 10%;
-  margin: 0.1em 0;
-}
-
-/*--------------------------------------------------------------
-## Shadow
---------------------------------------------------------------*/
-.sdw4 {
-  -webkit-filter: drop-shadow(2px 2px 1.5px rgba(10, 10, 10, 0.8));
-          filter: drop-shadow(2px 2px 1.5px rgba(10, 10, 10, 0.8));
-}
-
-.sdw3 {
-  -webkit-filter: drop-shadow(1.5px 1.5px 1px rgba(10, 10, 10, 0.85));
-          filter: drop-shadow(1.5px 1.5px 1px rgba(10, 10, 10, 0.85));
-}
-
-.sdw2 {
-  -webkit-filter: drop-shadow(1px 1px 0.5px rgba(10, 10, 10, 0.9));
-          filter: drop-shadow(1px 1px 0.5px rgba(10, 10, 10, 0.9));
-}
-
-.sdw1 {
-  -webkit-filter: drop-shadow(0.5px 0.5px 0px rgba(10, 10, 10, 0.95));
-          filter: drop-shadow(0.5px 0.5px 0px rgba(10, 10, 10, 0.95));
 }
 
 /*--------------------------------------------------------------
@@ -567,16 +505,49 @@ h1 {
   line-height: 1.5;
 }
 
-/*--------------------------------------------------------------
-## BOX
---------------------------------------------------------------*/
 .bxrad {
   border-radius: 3px;
 }
 
-/*--------------------------------------------------------------
-## Anime
---------------------------------------------------------------*/
+.bar-l {
+  display: block;
+  height: 0.2em;
+  width: 100%;
+  margin: 0.2em 0;
+}
+
+.bar-s {
+  display: block;
+  height: 0.1em;
+  width: 10%;
+  margin: 0.1em 0;
+}
+
+.sdw_card {
+  -webkit-filter: drop-shadow(0.39062vw 0.39062vw 0.39062vw rgba(5, 5, 5, 0.9));
+          filter: drop-shadow(0.39062vw 0.39062vw 0.39062vw rgba(5, 5, 5, 0.9));
+}
+
+.sdw4 {
+  -webkit-filter: drop-shadow(2px 2px 1.5px rgba(10, 10, 10, 0.8));
+          filter: drop-shadow(2px 2px 1.5px rgba(10, 10, 10, 0.8));
+}
+
+.sdw3 {
+  -webkit-filter: drop-shadow(1.5px 1.5px 1px rgba(10, 10, 10, 0.85));
+          filter: drop-shadow(1.5px 1.5px 1px rgba(10, 10, 10, 0.85));
+}
+
+.sdw2 {
+  -webkit-filter: drop-shadow(1px 1px 0.5px rgba(10, 10, 10, 0.9));
+          filter: drop-shadow(1px 1px 0.5px rgba(10, 10, 10, 0.9));
+}
+
+.sdw1 {
+  -webkit-filter: drop-shadow(0.5px 0.5px 0px rgba(10, 10, 10, 0.95));
+          filter: drop-shadow(0.5px 0.5px 0px rgba(10, 10, 10, 0.95));
+}
+
 @-webkit-keyframes bound {
   0%, 100% {
     top: 0;
@@ -593,6 +564,7 @@ h1 {
             transform: scale(1.3);
   }
 }
+
 @keyframes bound {
   0%, 100% {
     top: 0;
@@ -704,6 +676,9 @@ h1 {
   }
 }
 
+/*--------------------------------------------------------------
+# _t Original
+--------------------------------------------------------------*/
 /*--------------------------------------------------------------
 ## MainView
 --------------------------------------------------------------*/
