--- a/style.scss
+++ b/style.scss
@@ -15,11 +15,11 @@ License URI: LICENSE
 /*--------------------------------------------------------------
 # _t Original
 --------------------------------------------------------------*/
-@import "sass/org/lib";
+//@import "sass/org/lib";
 @import "sass/org/toppage";
 @import "sass/org/subpage";
 @import "sass/org/sidebar";
 @import "sass/org/footer";
-@import "sass/org/elements";
+//@import "sass/org/elements";
 @import "sass/org/fontsize";
 @import "sass/org/talk";
