--- a/sass/project/_p-talk.scss
+++ b/sass/project/_p-talk.scss
@@ -88,8 +88,8 @@
 			
 			background-color:#FFFFFF;
 			padding:5% 3% 5% 7%;
-			
 			position:relative;
+			/*
 			z-index:auto;
 			
 			&::before,&::after{
@@ -101,6 +101,7 @@
 				left: 0;
 				z-index: -1;
 			}
+			*/
 			&::before{
 				background-color:#FFFFFF;
 			}
@@ -109,41 +110,13 @@
 			}
 			
 			&.tks-s{
-				border-radius: 47% 43% 31% 32% / 43% 43% 41% 43%;
-				&::before{
-					width:90%;
-					left:5%;
-					transform: rotate(15deg);
-					border-radius:45% 49% 40% 38% / 42% 43% 48% 44%;
-				}
-				&::after{ 
-					width:90%;
-					left:5%;
-					transform: rotate(-15deg);
-					border-radius:38% 45% 44% 35% / 46% 47% 42% 45%;
-				}
+				@include cloud-s();
 			}
 			&.tks-m{
-				border-radius: 34% 33% 31% 32% / 27% 33% 38% 32%;
-				&::before{
-					transform: rotate(8deg);
-					border-radius: 45% 49% 40% 38% / 33% 40% 37% 33%;
-				}
-				&::after{ 
-						transform: rotate(-10deg);
-					border-radius: 38% 45% 44% 35% / 31% 37% 38% 35%;
-				}
+				@include cloud-m();
 			}
 			&.tks-l{
-				border-radius:34% 33% 31% 32% / 21% 22% 23% 20%;
-				&::before{
-					transform: rotate(6deg);
-					border-radius:45% 49% 40% 38% / 22% 32% 28% 33%;
-				}
-				&::after{ 
-					transform: rotate(-8deg);
-					border-radius:38% 45% 44% 35% / 36% 27% 32% 27%;
-				}
+				@include cloud-l();
 			}
 			
 			.tkc-p{
