--- a/sass/Foundation/_f-variable.scss
+++ b/sass/Foundation/_f-variable.scss
@@ -4,11 +4,13 @@
 --------------------------------------------------------------*/
 /*base color = white*/
 $clb-r10:rgba(253, 235, 235,1.0);
+$clb-r06:rgba(253, 235, 235,0.6);
 $clb-r03:rgba(253, 235, 235,0.3);
 $clb-g10:rgba(253, 255, 253,1.0);
 $clb-g08:rgba(253, 255, 253,0.8);
 $clb-g06:rgba(253, 255, 253,0.6);
 $clb-g03:rgba(253, 255, 253,0.3);
+$clb-g00:rgba(253, 255, 253,0.0);
 
 /*アクセント color = 赤茶*/
 $cla-d10:rgba(43, 24, 0,1.0);
