--- a/sass/project/_p-talk.scss
+++ b/sass/project/_p-talk.scss
@@ -87,7 +87,7 @@
 			max-width:90%;
 			
 			background-color:#FFFFFF;
-			padding:5% 3% 5% 7%;
+			padding:5%;
 			position:relative;
 			/*
 			z-index:auto;
