--- a/style.css
+++ b/style.css
@@ -1342,7 +1342,7 @@ html, body {
   height: auto;
   max-width: 90%;
   background-color: #FFFFFF;
-  padding: 5% 3% 5% 7%;
+  padding: 5%;
   position: relative;
   /*
 			z-index:auto;
@@ -1377,10 +1377,10 @@ html, body {
 
 .talk-base .tk-puff .tk-content.tks-s {
   z-index: auto;
-  border-top-left-radius: 36% 38%;
-  border-top-right-radius: 44% 42%;
-  border-bottom-right-radius: 44% 38%;
-  border-bottom-left-radius: 36% 45%;
+  border-top-left-radius: 45% 38%;
+  border-top-right-radius: 41% 43%;
+  border-bottom-right-radius: 37% 43%;
+  border-bottom-left-radius: 39% 43%;
 }
 
 .talk-base .tk-puff .tk-content.tks-s::before, .talk-base .tk-puff .tk-content.tks-s::after {
@@ -1396,22 +1396,31 @@ html, body {
 .talk-base .tk-puff .tk-content.tks-s::before {
   width: 90%;
   left: 5%;
-  -webkit-transform: rotate(15deg);
-          transform: rotate(15deg);
-  border-radius: 45% 49% 40% 38% / 42% 43% 48% 44%;
+  -webkit-transform: rotate(12deg);
+          transform: rotate(12deg);
+  border-top-left-radius: 36% 44%;
+  border-top-right-radius: 38% 43%;
+  border-bottom-right-radius: 44% 41%;
+  border-bottom-left-radius: 38% 40%;
 }
 
 .talk-base .tk-puff .tk-content.tks-s::after {
   width: 90%;
   left: 5%;
-  -webkit-transform: rotate(-15deg);
-          transform: rotate(-15deg);
-  border-radius: 38% 45% 44% 35% / 46% 47% 42% 45%;
+  -webkit-transform: rotate(-13deg);
+          transform: rotate(-13deg);
+  border-top-left-radius: 40% 36%;
+  border-top-right-radius: 40% 36%;
+  border-bottom-right-radius: 38% 42%;
+  border-bottom-left-radius: 38% 37%;
 }
 
 .talk-base .tk-puff .tk-content.tks-m {
   z-index: auto;
-  border-radius: 34% 33% 31% 32% / 27% 33% 38% 32%;
+  border-top-left-radius: 38% 38%;
+  border-top-right-radius: 41% 32%;
+  border-bottom-right-radius: 44% 32%;
+  border-bottom-left-radius: 39% 37%;
 }
 
 .talk-base .tk-puff .tk-content.tks-m::before, .talk-base .tk-puff .tk-content.tks-m::after {
@@ -1425,20 +1434,29 @@ html, body {
 }
 
 .talk-base .tk-puff .tk-content.tks-m::before {
-  -webkit-transform: rotate(8deg);
-          transform: rotate(8deg);
-  border-radius: 45% 49% 40% 38% / 33% 40% 37% 33%;
+  -webkit-transform: rotate(10deg);
+          transform: rotate(10deg);
+  border-top-left-radius: 47% 32%;
+  border-top-right-radius: 46% 34%;
+  border-bottom-right-radius: 41% 33%;
+  border-bottom-left-radius: 42% 38%;
 }
 
 .talk-base .tk-puff .tk-content.tks-m::after {
-  -webkit-transform: rotate(-10deg);
-          transform: rotate(-10deg);
-  border-radius: 38% 45% 44% 35% / 31% 37% 38% 35%;
+  -webkit-transform: rotate(-13deg);
+          transform: rotate(-13deg);
+  border-top-left-radius: 46% 37%;
+  border-top-right-radius: 50% 34%;
+  border-bottom-right-radius: 46% 33%;
+  border-bottom-left-radius: 43% 37%;
 }
 
 .talk-base .tk-puff .tk-content.tks-l {
   z-index: auto;
-  border-radius: 34% 33% 31% 32% / 21% 22% 23% 20%;
+  border-top-left-radius: 35% 29%;
+  border-top-right-radius: 40% 26%;
+  border-bottom-right-radius: 37% 30%;
+  border-bottom-left-radius: 32% 26%;
 }
 
 .talk-base .tk-puff .tk-content.tks-l::before, .talk-base .tk-puff .tk-content.tks-l::after {
@@ -1454,13 +1472,19 @@ html, body {
 .talk-base .tk-puff .tk-content.tks-l::before {
   -webkit-transform: rotate(6deg);
           transform: rotate(6deg);
-  border-radius: 45% 49% 40% 38% / 22% 32% 28% 33%;
+  border-top-left-radius: 41% 27%;
+  border-top-right-radius: 46% 35%;
+  border-bottom-right-radius: 50% 27%;
+  border-bottom-left-radius: 48% 31%;
 }
 
 .talk-base .tk-puff .tk-content.tks-l::after {
   -webkit-transform: rotate(-8deg);
           transform: rotate(-8deg);
-  border-radius: 38% 45% 44% 35% / 36% 27% 32% 27%;
+  border-top-left-radius: 48% 33%;
+  border-top-right-radius: 49% 30%;
+  border-bottom-right-radius: 47% 34%;
+  border-bottom-left-radius: 47% 29%;
 }
 
 .talk-base .tk-puff .tk-content .tkc-p {
@@ -1753,21 +1777,24 @@ html, body {
     right: 5%;
     bottom: 5%;
     z-index: 2;
+    -webkit-box-shadow: -2px -2px 0px 4px black;
+            box-shadow: -2px -2px 0px 4px black;
   }
-  #navimenu #spmenuon {
+  #navimenu #navimenu--on {
     display: none;
   }
-  #navimenu .spmenutoggle {
+  #navimenu .navimenu--area {
     display: block;
     position: fixed;
-    background-color: #00F;
     z-index: auto;
-    border-top-left-radius: 39% 39%;
-    border-top-right-radius: 44% 44%;
-    border-bottom-right-radius: 41% 40%;
-    border-bottom-left-radius: 39% 43%;
+    border-top-left-radius: 44% 37%;
+    border-top-right-radius: 37% 40%;
+    border-bottom-right-radius: 42% 41%;
+    border-bottom-left-radius: 40% 42%;
+    -webkit-backdrop-filter: blur(3px);
+            backdrop-filter: blur(3px);
   }
-  #navimenu .spmenutoggle::before, #navimenu .spmenutoggle::after {
+  #navimenu .navimenu--area::before, #navimenu .navimenu--area::after {
     content: '';
     position: absolute;
     width: 100%;
@@ -1776,31 +1803,52 @@ html, body {
     left: 0;
     z-index: -1;
   }
-  #navimenu .spmenutoggle::before {
-    width: 90%;
-    left: 5%;
-    -webkit-transform: rotate(15deg);
-            transform: rotate(15deg);
-    border-radius: 45% 49% 40% 38% / 42% 43% 48% 44%;
+  #navimenu .navimenu--area::before {
+    left: -5%;
+    top: 5%;
+    width: 110%;
+    height: 90%;
+    -webkit-transform: rotate(24deg);
+            transform: rotate(24deg);
+    border-top-left-radius: 52% 61%;
+    border-top-right-radius: 50% 58%;
+    border-bottom-right-radius: 48% 65%;
+    border-bottom-left-radius: 48% 61%;
+    background-color: red;
   }
-  #navimenu .spmenutoggle::after {
-    width: 90%;
+  #navimenu .navimenu--area::after {
     left: 5%;
-    -webkit-transform: rotate(-15deg);
-            transform: rotate(-15deg);
-    border-radius: 38% 45% 44% 35% / 46% 47% 42% 45%;
+    top: -5%;
+    width: 90%;
+    height: 110%;
+    -webkit-transform: rotate(-22deg);
+            transform: rotate(-22deg);
+    border-top-left-radius: 46% 57%;
+    border-top-right-radius: 55% 56%;
+    border-bottom-right-radius: 50% 61%;
+    border-bottom-left-radius: 53% 61%;
+    background-color: green;
   }
-  #navimenu #spmenuon:not(:checked) ~ .spmenutoggle {
+  #navimenu #navimenu--on:not(:checked) ~ .navimenu--area {
+    background-color: #fdfffd;
     bottom: 5%;
     right: 5%;
-    width: 20vw;
-    height: 20vw;
+    width: 15vw;
+    height: 15vw;
   }
-  #navimenu #spmenuon:checked ~ .spmenutoggle {
+  #navimenu #navimenu--on:not(:checked) ~ .navimenu--area::before, #navimenu #navimenu--on:not(:checked) ~ .navimenu--area::after {
+    background-color: #fdfffd;
+  }
+  #navimenu #navimenu--on:checked ~ .navimenu--area {
+    background-color: rgba(253, 255, 253, 0.6);
     bottom: 0;
     right: 0;
     width: 100%;
     height: 100%;
+    border-radius: 0;
+  }
+  #navimenu #navimenu--on:checked ~ .navimenu--area::before, #navimenu #navimenu--on:checked ~ .navimenu--area::after {
+    background-color: rgba(253, 255, 253, 0);
   }
 }
 
@@ -2108,6 +2156,7 @@ html, body {
   letter-spacing: 0.1em;
   margin-bottom: 2em;
   margin-left: 1.3em;
+  margin-right: 1.3em;
   margin-top: 1em;
 }
 
